mic issue fixed on mobile devices

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -73,7 +73,7 @@ footer {
   color: #ffffff;
   outline: 0;
   border: 0;
-  max-width: calc(100% - 120px);
+  /* max-width: calc(100% - 120px); */
   min-width: calc(100% - 120px);
   background-color: transparent;
 }
